[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mermaidmd2pdf"
version = "0.1.0"
description = "Convert Markdown files with Mermaid diagrams to PDF"
authors = [
    {name = "Chad Walters", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "markdown",
    "mermaid",
    "pdf",
    "documentation",
    "diagrams",
    "converter"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0.0",
    "psutil>=5.9.0",  # For performance monitoring
]

[project.urls]
Homepage = "https://github.com/chadrwalters/MermaidMD2PDF"
Documentation = "https://github.com/chadrwalters/MermaidMD2PDF#readme"
Repository = "https://github.com/chadrwalters/MermaidMD2PDF.git"
Issues = "https://github.com/chadrwalters/MermaidMD2PDF/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.1",
    "psutil>=5.9.0",  # For performance tests
]

[project.scripts]
mermaidmd2pdf = "mermaidmd2pdf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mermaidmd2pdf"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
    "docs/**/*",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
allow_new_syntax = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "UP006",  # Use `list` instead of `List` for type annotations
    "UP007",  # Use `X | Y` for type annotations
    "UP035",  # Use `dict` instead of `Dict` for type annotations
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.hatch.metadata]
allow-direct-references = true

# PDF Engine Configuration
[tool.mermaidmd2pdf]
pdf_engine = "xelatex"  # Using XeLaTeX for superior typography
pdf_engine_opts = [
    "-interaction=nonstopmode",
    "-halt-on-error",
]
template_dir = "templates"

[tool.coverage.run]
source = ["src/mermaidmd2pdf"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 75
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov=mermaidmd2pdf --cov-report=term-missing --cov-fail-under=75"
testpaths = ["tests"]
