[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mermaidmd2pdf"
version = "0.2.0"
description = "Convert Markdown with Mermaid diagrams to PDF"
authors = [
    { name = "Chad Walters", email = "chad@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "markdown",
    "mermaid",
    "pdf",
    "documentation",
    "diagrams",
    "converter"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.0.0",
    "psutil>=5.9.0",  # For performance monitoring
]

[project.urls]
Homepage = "https://github.com/chadwalters/mermaidmd2pdf"
Documentation = "https://github.com/chadwalters/MermaidMD2PDF#readme"
Repository = "https://github.com/chadwalters/mermaidmd2pdf.git"
Issues = "https://github.com/chadwalters/mermaidmd2pdf/issues"

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.1",
    "types-setuptools>=69.1.0.20240302",
]

[project.scripts]
mermaidmd2pdf = "mermaidmd2pdf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mermaidmd2pdf"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
    "docs/**/*",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mermaidmd2pdf"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.hatch.metadata]
allow-direct-references = true

# PDF Engine Configuration
[tool.mermaidmd2pdf]
pdf_engine = "xelatex"  # Using XeLaTeX for superior typography
pdf_engine_opts = [
    "-interaction=nonstopmode",
    "-halt-on-error",
]
template_dir = "templates"

[tool.coverage.run]
source = ["src/mermaidmd2pdf"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
fail_under = 75
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mermaidmd2pdf --cov-report=term-missing"
